// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`input validation snapshots bogus command name 1`] = `
"cli.ts <command>

Commands:
  cli.ts generate-axios-client   Generates an Axios client using the specified
                                 schema and options.
  cli.ts generate-api-types      Generates API types using the specified schema
                                 and options.
  cli.ts generate-open-api-spec  Generates an OpenAPI v3.1.0 spec using the
                                 specified schema and options.

Options:
  --help     Show help                                                 [boolean]
  --version  Show version number                                       [boolean]

Unknown argument: generate-bogus"
`;

exports[`input validation snapshots empty input 1`] = `
"cli.ts <command>

Commands:
  cli.ts generate-axios-client   Generates an Axios client using the specified
                                 schema and options.
  cli.ts generate-api-types      Generates API types using the specified schema
                                 and options.
  cli.ts generate-open-api-spec  Generates an OpenAPI v3.1.0 spec using the
                                 specified schema and options.

Options:
  --help     Show help                                                 [boolean]
  --version  Show version number                                       [boolean]

Not enough non-option arguments: got 0, need at least 1"
`;

exports[`input validation snapshots missing arguments - API generation 1`] = `
"cli.ts generate-api-types

Generates API types using the specified schema and options.

Options:
  --help         Show help                                             [boolean]
  --version      Show version number                                   [boolean]
  --schema       The filepath of the schema spec.            [string] [required]
  --output       A filepath for the generated output.        [string] [required]
  --format       Whether to format the output using prettier.
                                                      [boolean] [default: false]
  --assumptions  Which JSONSchema assumptions to apply. Must be either 'all',
                 'none', or a comma-separated list containing one or more of:
                 noAdditionalPropertiesOnObjects,
                 objectPropertiesRequiredByDefault    [string] [default: \\"none\\"]

Missing required arguments: schema, output"
`;

exports[`input validation snapshots missing arguments - Axios generation 1`] = `
"cli.ts generate-axios-client

Generates an Axios client using the specified schema and options.

Options:
  --help         Show help                                             [boolean]
  --version      Show version number                                   [boolean]
  --schema       The filepath of the schema spec.            [string] [required]
  --output       A filepath for the generated output.        [string] [required]
  --format       Whether to format the output using prettier.
                                                      [boolean] [default: false]
  --assumptions  Which JSONSchema assumptions to apply. Must be either 'all',
                 'none', or a comma-separated list containing one or more of:
                 noAdditionalPropertiesOnObjects,
                 objectPropertiesRequiredByDefault    [string] [default: \\"none\\"]
  --className    The name of the generated client class.
                                                    [string] [default: \\"Client\\"]

Missing required arguments: schema, output"
`;
